# play-evmone

./: .gitignore  Cargo.toml  Makefile  build.rs
contracts/: CallOther.sol  CreateContract.sol
src/: abi.rs  abi_cmd.rs  evmc.rs  evmone.rs  main.rs
