[package]
name = "play-evmone"
version = "0.1.0"
authors = ["Linfeng Qian <thewawar@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
evmc-sys = "7.1.0"
hex = "0.4.2"
serde = { version = "1.0", features = ["derive"] }
libc = "0.2.69"